clean auth service